Changes since version 2.1.2
---------------------------

- Changed the way servant locators work if a server has a servant
  locator registered for a specific category, in addition to a default
  servant locator. Previously, if the locator for the specific category
  failed to locate the servant, the run time would then call the default
  locator. With the new behavior, if the locator for the specific category
  does not return a servant, the default locator is not called.

- Ice.Communicator.createObjectAdapter() throws
  Ice.AlreadyRegisteredException if it is called with the name of an
  object adapter that already exists.

- Fixed a bug in the slice2java code generator, which would cause
  incorrect code to be generated when metadata was used to modify
  dictionary types used as class or struct members.

- Added ice_communicator() to proxies. This function returns the
  communicator that was used to create the proxy.

- Added ice_toString() to proxies. This function returns the
  stringified proxy. This function can be more convenient to use than
  communicator.stringToProxy() because you do not need the
  communicator to stringify a proxy that way.

- Parsing a stringified proxy no longer completely fails if the proxy
  contains an endpoint type that is unknown to the Ice runtime as
  long as the proxy contains other endpoints that are known. A warning
  is printed for the unknown types that are encountered.

- Ice.ObjectImpl is now an abstract class that cannot be instantiated.
  This change should be transparent to application code.

- Added new features to the Java mapping:

  - Structures, classes, and exceptions now have one-shot
    constructors. For example, for a class

      class Example {
          int i;
	  string s;
      };

    the following constructors are generated:

      public class Example extends Ice.ObjectImpl {
	  public Example() { /* ... */ }
	  public Example(int i, String s) { /* ... */ }
	  // ...
      }
