@@ -1,6 +1,10 @@
 Changes since version 2.1.2
 ---------------------------
 
+- The mapping for structures has changed: the clone() method now
+  has an empty exception specification; previously, it could throw
+  java.lang.CloneNotSupportedException.
+
 - Changed the way servant locators work if a server has a servant
   locator registered for a specific category, in addition to a default
   servant locator. Previously, if the locator for the specific category
